--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -1,12 +1,12 @@
 <div class="row  info-box">
-	<div class="col-lg-12 " style="margin-top: 0.6rem !important;">
+	<div class="col-lg-12 " style="margin-top: 0rem !important;">
 		<div class="accordion  " [ngClass]="isMultipleMatches ? 'mtop-2' : 'mtop-4'">
 			<div  *ngIf="postedJobsDetails?.match_select?.experience=='0'">
 				<div class="row">
 					<div class="col-lg-4 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
 							<li *ngIf="!isMultipleMatches" class="list-group-item text-capitalize ">{{"userProfile.totalYearsOfExp" | translate }}</li>
-							<li *ngIf="isMultipleMatches" class="list-group-item text-capitalize ">{{"matches.shorttotalYearsOfExperience" | translate }}</li>
+							<li *ngIf="isMultipleMatches" style="font-size:13.5px;" class="list-group-item text-capitalize ">{{"matches.shorttotalYearsOfExperience" | translate }}</li>
 						</ul>
 					</div>
 					<div class="col-lg-8 col-md-77 col-sm-8 info">
@@ -20,7 +20,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
-							<li  *ngIf="!isMultipleMatches"  class="list-group-item text-capitalize ">{{"matches.totalYearsOfSapExperience" | translate }}</li>
+							<li  *ngIf="!isMultipleMatches" style="font-size:13.5px;" class="list-group-item text-capitalize ">{{"matches.totalYearsOfSapExperience" | translate }}</li>
 							<li *ngIf="isMultipleMatches" class="list-group-item text-capitalize ">{{"matches.totalYearsOfSapExperienceShort" | translate }}</li>
 						</ul>
 					</div>
