--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
@@ -77,7 +77,7 @@
 				</div>
 				<div class="col-lg-7 col-md-7 col-sm-7 info">
 					<ul class="list-group">
-						<li class=" list-group-item text-uppercase">
+						<li class=" list-group-item text-uppercase d-flex">
 							<ng-container *ngIf="jobInfo?.skills?.length; else elseSkillsTemplate">
 							  <span class="m-0 float-left" *ngFor="let item of utilsHelperService.differenceByPropValArray(jobInfo?.skills, jobInfo?.hands_on_experience, 'skill_id'); let i = index; let last = last;">
 								<span style="cursor: pointer;" class="float-left skils-short" *ngIf="!utilsHelperService.isEmptyObj(sharedService.onFindSkillsFromSingleID(item))" tooltipClass="my-custom-class"  container="body"  placement="top" [ngbTooltip]="utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.long_tag)">
@@ -417,7 +417,7 @@
 				</div>
 				<div class="col-lg-7 col-md-7 col-sm-7 info">
 					<ul class="list-group">
-						<li class=" list-group-item text-uppercase">
+						<li class=" list-group-item text-uppercase d-flex">
 							<ng-container *ngIf="jobInfo?.skills?.length; else elseSkillsTemplate">
 							  <span class="m-0 float-left" *ngFor="let item of utilsHelperService.differenceByPropValArray(jobInfo?.skills, jobInfo?.hands_on_experience, 'skill_id'); let i = index; let last = last;">
 								<span style="cursor: pointer;" class="float-left skils-short" *ngIf="!utilsHelperService.isEmptyObj(sharedService.onFindSkillsFromSingleID(item))" tooltipClass="my-custom-class"  container="body"  placement="top" [ngbTooltip]="utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.long_tag)">
@@ -759,7 +759,7 @@
 				</div>
 				<div class="col-lg-7 col-md-7 col-sm-7 info">
 					<ul class="list-group">
-						<li class=" list-group-item text-uppercase">
+						<li class=" list-group-item text-uppercase d-flex">
 							<ng-container *ngIf="jobInfo?.skills?.length; else elseSkillsTemplate">
 							  <span class="m-0 float-left" *ngFor="let item of utilsHelperService.differenceByPropValArray(jobInfo?.skills, jobInfo?.hands_on_experience, 'skill_id'); let i = index; let last = last;">
 								<span style="cursor: pointer;" class="float-left skils-short" *ngIf="!utilsHelperService.isEmptyObj(sharedService.onFindSkillsFromSingleID(item))" tooltipClass="my-custom-class"  container="body"  placement="top" [ngbTooltip]="utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.long_tag)">
@@ -1074,7 +1074,7 @@
 				</div>
 				<div class="col-lg-7 col-md-7 col-sm-7 info">
 					<ul class="list-group">
-						<li class=" list-group-item text-uppercase">
+						<li class=" list-group-item text-uppercase d-flex">
 							<ng-container *ngIf="jobInfo?.skills?.length; else elseSkillsTemplate">
 							  <span class="m-0 float-left" *ngFor="let item of utilsHelperService.differenceByPropValArray(jobInfo?.skills, jobInfo?.hands_on_experience, 'skill_id'); let i = index; let last = last;">
 								<span style="cursor: pointer;" class="float-left skils-short" *ngIf="!utilsHelperService.isEmptyObj(sharedService.onFindSkillsFromSingleID(item))" tooltipClass="my-custom-class"  container="body"  placement="top" [ngbTooltip]="utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.long_tag)">
