--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -166,7 +166,7 @@
                       <span data-toggle="modal" data-target="#exampleModal">
                         <a
                         [class.disabled]="!onGetFilteredValue(item?.doc_resume)"
-                        (click)="onGetFilteredValue(item?.doc_resume) && onToggleResumeForm(true, (userMeta?.doc_resume?.path + '/' + userMeta?.doc_resume?.folder + '/' + onGetFilteredValue(item?.doc_resume)))" class="btn btn-outline-blue btn-sm" href="javascript:;">
+                        (click)="onGetFilteredValue(item?.doc_resume) && onToggleResumeForm(true, (onGetFilteredValue(item?.doc_resume)))" class="btn btn-outline-blue btn-sm" href="javascript:;">
                           <i class="fas fa-file-alt"></i> {{"shared.resume" | translate }}
                         </a>
                       </span>
