--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -27,7 +27,7 @@
       <div class="col-lg-4  col-md-4 mt-4" style="z-index: 1;">
         <div class="upload-box upload-boxs ">
           <div class="box text-center upload-image upload-boxss">
-            <img *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : savedUserDetails?.meta?.photo?.path+'/'+ savedUserDetails?.meta?.photo?.folder+'/'+savedUserDetails?.meta?.photo?.sizes?.medium+'/'+savedUserDetails?.photo+'?v='+ randomNum" alt="upload-photo" class="img-fluid mx-auto check-img rounded-circle border border-primary"
+            <img *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : userprofilepath+savedUserDetails?.photo" alt="upload-photo" class="img-fluid mx-auto check-img rounded-circle border border-primary"
                                     style="width:150px;height:150px;">
             <input *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [style.top]="defaultProfilePic ? '-150px' : '-150px'" type="file"  class="upload-input" #userImage (change)="handleFileInput($event, CropImage);" />
 			<input *ngIf="(!defaultProfilePic && !savedUserDetails?.photo)" [style.top]="defaultProfilePic ? '0px' : '0px'" type="file"  class="upload-input" #userImage (change)="handleFileInput($event, CropImage);" />
