--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -108,19 +108,19 @@
 														<div class="col-lg-5 col-md-5 change-lays " style="display:flex;">
 															<span class="mr-2"  style="display: inline-block;">														
 																<a [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_cover)" href="javascript:;" (click)="onGetFilteredValue(matchingUsers?.profile?.doc_cover) && onToggleCoverForm(true, (onGetFilteredValue(matchingUsers?.profile?.doc_cover)))" class="btn btn-outline-orange btn-sm" data-toggle="modal" data-target="#resumeModal">
-																		<small style="display:inline-block;"><i class="fas fa-file-alt"></i> {{"shared.coverLetter" | translate}}</small>
+																		<small id="coverletter" style="display:inline-block;"><i class="fas fa-file-alt"></i> {{"shared.coverLetter" | translate}}</small>
 																	</a>	
 															</span>	
 															<span  style="display: inline-block;">
 																<a [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_resume)" href="javascript:;" (click)="onGetFilteredValue(matchingUsers?.profile?.doc_resume) && onToggleResumeForm(true, (onGetFilteredValue(matchingUsers?.profile?.doc_resume)))" class="btn btn-outline-blue btn-sm" data-toggle="modal" data-target="#resumeModal">
-																		<small style="display:inline-block;"><i class="fas fa-file-alt"></i> {{"shared.resume" | translate}} </small>
+																		<small id="resumeletter" style="display:inline-block;"><i class="fas fa-file-alt"></i> {{"shared.resume" | translate}} </small>
 																	</a>	
 															</span>	
 														</div>
 													</div>
 													<div class="row mt-2 d-flex">
 														<div class="col-lg-8 col-md-8">						
-															<div class="media">
+															<div class="media" id="media_width">
 																<img
 																  [src]="matchingUsers?.profile?.photo ? userprofilepath+matchingUsers?.profile?.photo : 'assets/images/user-img-icon.jpg'">
 																<div class="media-body">
